--- a/styles/style.css
+++ b/styles/style.css
@@ -1,97 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html {
-  block-size: 100%;
-}
-
-.page {
-  display: flex;
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
-}
-
-.content {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-areas: "result details";
-  place-items: end;
-  gap: 32px;
-  inline-size: 1140px;
-  padding: 133PX 30px;
-}
-
-.content__list-container {
-  display: flex;
-  overflow: auto;
-  height: 534px;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.title {
-  padding-bottom: 26px;
-}
-
-.content__list {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.content__details {
-  display: flex;
-  flex-direction: column;
-}
-
-.content__video-card {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-}
-
-.content__video-card-description-container {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-.content__video-card-thumbnail {
-  width: 194px;
-  height: 103px;
-  object-fit: contain;
-  object-position: center;
-}
-
-.search-form {
-  display: flex;
-  justify-content: space-between;
-  align-items: start;
-}
-
-.result__video-container {
-  width: 711px;
-  height: 386px;
-  padding-bottom: 16px;
-}
-.result__video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.search-form__fieldset {
-  
-}
-
 h1,
 h2,
 h3,
@@ -109,6 +15,168 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  block-size: 100%;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: auto;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  grid-template-areas: "result details";
+  align-items: end;
+  gap: 30px;
+  inline-size: 1140px;
+}
+
+.content__list-container {
+  overflow: auto;
+  height: 298px;
+  flex-direction: column;
+}
+
+.title {
+  padding-bottom: 18px;
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__details {
+  height: 100%;
+}
+
+.content__card-link {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.content__video-card-title {
+  text-transform: uppercase;
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+  font-size: 18px;
+  font-weight: 400;
+  -webkit-line-clamp: 1;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 399px;
+  padding-bottom: 16px;
+}
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+} 
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  gap: 5px;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+}
+
+.search-form__textfield {
+  width: 225px;
+  height: 27px;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  color: #fff;
+  font-family: inherit;
+  font-size: inherit;
+  background-color: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 /* Кастомный скроллбар */
