--- a/styles/style.css
+++ b/styles/style.css
@@ -53,11 +53,12 @@ html {
   overflow: auto;
   height: 298px;
   flex-direction: column;
+  
 }
 
 .title {
   padding-bottom: 18px;
-  font-family: Oswald, sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 75px;
   font-weight: 700;
   line-height: 94%;
@@ -74,20 +75,47 @@ html {
   gap: 30px;
 }
 
+.content__list-item {
+  padding: 0 3px 0;
+}
+
 .content__details {
   height: 100%;
 }
 
 .content__card-link {
+  display: block;
   color: #FFFFFF;
   text-decoration: none;
 }
 
+.content__card-link_current {
+  background-color: #545050; /*делаем активную карточку серой */
+}
+
+
+/* передаём активное состояние на выбранную карточку*/
+ .content__card-link:active {
+  background-color: #545050 !important; /* в данном случае меняем цвет фона у карточки в активном состоянии*/
+}
+
+/* Добавляем подчеркивание при наведении */
+.content__card-link:hover {
+  text-decoration: underline;
+} 
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
 .content__video-card-title {
   text-transform: uppercase;
-  font-family: Oswald, sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 30px;
   font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .content__video-card {
@@ -98,14 +126,19 @@ html {
 
 .content__video-card-description {
   line-height: 16.2px;
+  text-underline-offset: 6px;
   font-size: 18px;
   font-weight: 400;
-  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .content__video-card-description-container {
   display: flex;
   flex-direction: column;
+  width: 196px;
   flex-grow: 1;
 }
 
@@ -116,16 +149,17 @@ html {
   object-position: center;
 }
 
-.search-form {
+.search-form { 
   display: flex;
   justify-content: space-between;
   align-items: start;
+  margin-top: 16px;
 }
 
 .result__video-container {
   width: 711px;
-  height: 399px;
-  padding-bottom: 16px;
+  height: 386px;
+  object-fit: cover;
 }
 .result__video {
   width: 100%;
@@ -162,6 +196,7 @@ html {
   width: fit-content;
 }
 
+
 .search-form__textfield {
   width: 225px;
   height: 27px;
@@ -177,6 +212,94 @@ html {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px #fff solid;
+  outline-offset: 2px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  gap: 17px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  width: 19px;
+  height: 19px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #fff;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  background-color: #fff;
+  content: '';
+  margin: 1px;
+  width: 15px;
+  height: 15px;
+}
+
+.search-form__label-text {
+  margin-left: 5px; /* Добавляем левыый отступ от чекбокса */
+  border-bottom: 1px solid transparent; /* Задаем нижнюю границу для резервирования места для линии при наведении*/
+}
+
+.search-form__label:hover .search-form__label-text {
+  border-bottom: 1px solid #fff;
+}
+
+.button {
+  border: 1px solid #fff;
+  color: #fff;
+  background-color: transparent;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 700px;
+}
+
+.button:hover {
+  text-decoration: underline;/* Добавляем подчеркивание при наведении */
+}
+
+.button:active {
+  background-color: #545050;/* Добавляем фон при нажатии */
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.search-form__submit-button {
+  margin-top: 20px; 
+  margin-bottom: 2px;
+  min-height: 34px;
+  width: 194px;
+}
+
+.more-button {
+  min-height: 34px;
+  width: 392px;
+  margin-top: 20px;
+}
+
+.result__video-container,
+.content__list-container {
+  position: relative;
+}
+
+.preloader {
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 /* Кастомный скроллбар */
