--- a/styles/style.css
+++ b/styles/style.css
@@ -116,10 +116,12 @@ html {
   text-transform: uppercase;
   font-family: 'Oswald', sans-serif;
   font-size: 30px;
+  line-height: 37px;
   font-weight: 700;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-bottom: 6px;
 }
 
 .content__video-card {
@@ -158,6 +160,7 @@ html {
   justify-content: space-between;
   align-items: start;
   margin-top: 16px;
+  align-items: flex-end;
 }
 
 .result__video-container {
@@ -203,7 +206,7 @@ html {
 
 .search-form__textfield {
   width: 225px;
-  height: 27px;
+  height: 24px;
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
@@ -283,8 +286,6 @@ html {
 }
 
 .search-form__submit-button {
-  margin-top: 20px; 
-  margin-bottom: 2px;
   min-height: 34px;
   width: 194px;
 }
